fix huge line height to not cutoff bottom of letters with tails

--- a/source/css/scss/vendor_override/foundation/_type.scss
+++ b/source/css/scss/vendor_override/foundation/_type.scss
@@ -63,7 +63,7 @@ $impact-font-size-reduction			: rem-calc(19);
 $impact-line-height-reduction		: rem-calc(22);
 
 $huge-headline-font-size		: rem-calc(81);
-$huge-headline-line-height		: rem-calc(84);
+$huge-headline-line-height		: rem-calc(88);
 $huge-headline-font-size-reduction		: rem-calc(27);
 $huge-headline-line-height-reduction	: rem-calc(28);
 
